# miplata-categorizer

./: .gitignore  Dockerfile  README.md  pyproject.toml
.understand-anything/: .understandignore  fingerprints.json  knowledge-graph.json  meta.json
alembic/: env.py
alembic/versions/: 0001_initial.py  0002_seed_own_accounts_and_merchants.py  0003_jsonb_aliases.py  0004_own_accounts_miplata_id.py  0005_seed_carcass_merchants.py
config/: gold_set_v1.jsonl  taxonomy.yaml
docs/: context.md  plan.md
eval/: compare.py  eval.py  render.py
eval/baselines/: v0.json
infra/jenkins/: Jenkinsfile
scripts/: export_ft_corpus.py  sample_for_gold_v2.py  seed_gold_set.py  sync_miplata_accounts.py
src/categorizer/: api.py  cascade.py  config.py  features.py  llm.py  main.py  merchant.py  metrics.py  normalize.py  retrieval.py  rules.py  schemas.py  storage.py  taxonomy.py  tools.py
tests/: conftest.py  test_cascade_paired_tx.py  test_cascade_reject_gate.py  test_eval_compare.py  test_eval_metrics.py  test_llm_prompts.py  test_normalize.py  test_rules.py  test_taxonomy.py
training/: README.md  __init__.py  dataset.py  eval_ft.py  train.py
