[project]
name = "miplata-categorizer"
version = "0.1.0"
description = "Self-hosted Colombian-Spanish personal-finance transaction categorizer (cascade: rules → kNN → small-LLM-with-tools)."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.118",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "sqlalchemy[asyncio]>=2.0.36",
    "psycopg[binary,pool]>=3.2",
    "pgvector>=0.3.6",
    "alembic>=1.14",
    "openai>=1.54",
    "httpx>=0.28",
    "prometheus-client>=0.21",
    "structlog>=24.4",
    "pyyaml>=6.0",
    "python-dateutil>=2.9",
    # Embedding runtime. fastembed is ONNX-optimized for CPU; we use
    # paraphrase-multilingual-MiniLM-L12-v2 (384-dim, int8).
    "fastembed>=0.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "ruff>=0.8",
    "mypy>=1.13",
    "types-PyYAML",
]
# Eval harness extras — kept optional so the runtime container stays lean
# (hiclass + netcal pull ONNX/scikit-learn transitives we don't need in prod).
eval = [
    "hiclass>=5.0",
    "netcal>=1.3",
    "httpx>=0.28",
    "pandas>=2.2",
    "numpy>=2.0",
    "matplotlib>=3.9",
]

[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.exclude-package-data]
"*" = ["eval/*", "tests/*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM", "ARG", "RUF"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["src"]
